# path-data-adapter

./: .gitignore  Disclaimer.md  README.md  pyproject.toml
docs/: blockers.md
docs/architecture/: 00-repo-layout.md  01-ingestion.md  cleanup.md
docs/others/: boundary.md  delays-cases.md
docs/risk/: 02-brittle-ingestion.md  Disclaimer.md
docs/road-map/: future-dependency.md
notebooks/: dev.ipynb  update_customer_map.ipynb
src/path_adapter/: __init__.py
src/path_adapter/common/: config.py
src/path_adapter/configs/contracts/: so.colums.json  so.data.json
src/path_adapter/configs/io/: paths.win.json
src/path_adapter/io/: file_read.py
src/path_adapter/json_configs/contracts/: so.contract.json  so.mapping.json
src/path_adapter/json_configs/io/: paths.win.json
