[project]
name = "path-adapter"
version = "0.1.0"
description = "PATH Data Adapter Project"
authors = [
    {name = "ZheRao",email = "zheraoeminem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "path-adapter"

packages = [
  { include = "path_adapter", from = "src" }
]

[tool.setuptools.package-data]
path_adapter = ["configs/**/*.json"]

[dependency-groups]
dev = [
    "ipykernel (>=7.1.0,<8.0.0)"
]
